--- a/force-app/main/default/classes/AdminPanelRemote.cls
+++ b/force-app/main/default/classes/AdminPanelRemote.cls
@@ -4,7 +4,8 @@
 
 public with sharing class AdminPanelRemote {
 
-    public class BatchException extends Exception{}
+    public class BatchException extends Exception {
+    }
 
     public static final List<String> ASYNC_STATUSES = new List<String>{
             'Holding',
@@ -16,20 +17,25 @@ public with sharing class AdminPanelRemote {
     @AuraEnabled
     public static List<JobWrapper> getData() {
         try {
-            List<Batch_Executor__mdt> batchExecutors = [SELECT Id, Label, DeveloperName FROM Batch_Executor__mdt];
+            List<Batch_Executor__mdt> batchExecutors = [
+                    SELECT Id, Label, DeveloperName, Relaunch_Interval__c
+                    FROM Batch_Executor__mdt
+            ];
 
             Map<String, Batch_Executor__mdt> batchMap = new Map<String, Batch_Executor__mdt>();
             for (Batch_Executor__mdt be : batchExecutors) batchMap.put(be.DeveloperName, be);
 
             List<AsyncApexJob> asyncApexJobs = [
                     SELECT
-                            ApexClass.Name
+                            ApexClass.Name,
+                            CompletedDate,
+                            Status
                     FROM AsyncApexJob
-                    WHERE JobType = 'BatchApex' AND Status IN: ASYNC_STATUSES
-                    AND ApexClass.Name IN: batchMap.keySet()
+                    WHERE JobType = 'BatchApex' AND Status IN:ASYNC_STATUSES
+                    AND ApexClass.Name IN:batchMap.keySet()
             ];
-            Map<String, Id> runningBatches = new Map<String, Id>();
-            for(AsyncApexJob asyncApexJob : asyncApexJobs) runningBatches.put(asyncApexJob.ApexClass.Name, asyncApexJob.Id);
+            Map<String, AsyncApexJob> runningBatches = new Map<String, AsyncApexJob>();
+            for (AsyncApexJob asyncApexJob : asyncApexJobs) runningBatches.put(asyncApexJob.ApexClass.Name, asyncApexJob);
 
             List<CronTrigger> cronTriggers = [
                     SELECT
@@ -39,11 +45,23 @@ public with sharing class AdminPanelRemote {
                     WHERE CronJobDetail.Name IN:batchMap.keySet()
             ];
             Map<String, CronTrigger> scheduledBatches = new Map<String, CronTrigger>();
-            for(CronTrigger ct : cronTriggers) scheduledBatches.put(ct.CronJobDetail.Name, ct);
+            for (CronTrigger ct : cronTriggers) scheduledBatches.put(ct.CronJobDetail.Name, ct);
+
+            Map<String, AsyncApexJob> completedJobs = new Map<String, AsyncApexJob>();
+            for (AsyncApexJob aj : [
+                    SELECT ApexClass.Name, CompletedDate, ExtendedStatus
+                    FROM AsyncApexJob
+                    WHERE Status = 'Completed'
+                        AND ApexClass.Name IN:batchMap.keySet()
+                        AND CompletedDate >=: System.now().addDays(-2)
+                    ORDER BY CompletedDate DESC
+            ]) {
+                if(!completedJobs.containsKey(aj.ApexClass.Name)) completedJobs.put(aj.ApexClass.Name, aj);
+            }
 
             List<JobWrapper> jobWrappers = new List<JobWrapper>();
             for (Batch_Executor__mdt bex : batchExecutors) {
-                jobWrappers.add(new JobWrapper(bex, scheduledBatches, runningBatches));
+                jobWrappers.add(new JobWrapper(bex, scheduledBatches, runningBatches, completedJobs));
             }
 
             return jobWrappers;
@@ -78,7 +96,7 @@ public with sharing class AdminPanelRemote {
     public static void runBatch(String jobName) {
         try {
             JobWrapper jobWrapper = getState(jobName);
-            if(jobWrapper.jobId == null) {
+            if (jobWrapper.jobId == null) {
                 Database.executeBatch((Database.Batchable<SObject>) Type.forName(jobWrapper.jobName).newInstance());
             }
         } catch (Exception e) {
@@ -90,7 +108,7 @@ public with sharing class AdminPanelRemote {
     public static void stopBatch(String jobName) {
         try {
             JobWrapper jobWrapper = getState(jobName);
-            if(jobWrapper.jobId != null) System.abortJob(jobWrapper.jobId);
+            if (jobWrapper.jobId != null) System.abortJob(jobWrapper.jobId);
         } catch (Exception e) {
             AuraHelper.throwException(e);
         }
@@ -100,13 +118,13 @@ public with sharing class AdminPanelRemote {
     public static JobWrapper getState(String jobName) {
         try {
             JobWrapper wrapper;
-            for(JobWrapper jw : getData()) {
-                if(jw.jobName.equals(jobName)) {
+            for (JobWrapper jw : getData()) {
+                if (jw.jobName.equals(jobName)) {
                     wrapper = jw;
                     break;
                 }
             }
-            if(wrapper == null) throw new BatchException('No batch found!');
+            if (wrapper == null) throw new BatchException('No batch found!');
 
             return wrapper;
         } catch (Exception e) {
@@ -119,27 +137,41 @@ public with sharing class AdminPanelRemote {
         @AuraEnabled public String label;
         @AuraEnabled public String jobId;
         @AuraEnabled public String jobName;
+        @AuraEnabled public AsyncApexJob prevJob;
+        @AuraEnabled public Datetime prevLaunch;
         @AuraEnabled public Datetime nextLaunch;
         @AuraEnabled public String state;
         @AuraEnabled public Boolean showSpinner;
+        @AuraEnabled public Integer period;
 
-        public JobWrapper(Batch_Executor__mdt be, Map<String, CronTrigger> scheduledBatches, Map<String, Id> runningBatches) {
+        public JobWrapper(
+                Batch_Executor__mdt be,
+                Map<String, CronTrigger> scheduledBatches,
+                Map<String, AsyncApexJob> asyncBatches,
+                Map<String, AsyncApexJob> completedJobs
+        ) {
             this.jobName = be.DeveloperName;
             this.label = be.Label;
             this.showSpinner = false;
+            this.period = (Integer) be.Relaunch_Interval__c;
 
-            if(runningBatches.containsKey(jobName)) {
-                jobId = runningBatches.get(jobName);
-                state = 'RUNNING';
+            if (completedJobs.containsKey(jobName)) {
+                prevJob = completedJobs.get(jobName);
+                prevLaunch = completedJobs.get(jobName).CompletedDate;
+            }
+
+            if (asyncBatches.containsKey(jobName)) {
                 css = 'ad-state-running';
-            } else if(scheduledBatches.containsKey(jobName)) {
+                jobId = asyncBatches.get(jobName).Id;
+                state = 'RUNNING';
+            } else if (scheduledBatches.containsKey(jobName)) {
+                css = 'ad-state-running';
                 jobId = scheduledBatches.get(jobName).Id;
                 state = 'SCHEDULED';
-                css = 'ad-state-waiting';
                 nextLaunch = scheduledBatches.get(jobName).NextFireTime;
             } else {
-                state = 'NOT STARTED';
-                css = 'ad-state-not-started';
+                state = 'STOPPED';
+                css = 'ad-state-stopped';
             }
         }
     }
